# phi3_finetune_new

./: .env.example  .gitignore  EARLY_STOPPING_GUIDE.md  README.md  SETUP_GUIDE.md  activate_env.sh  check_environment.py  launch_training.py  pyproject.toml  requirements.txt  setup_environment.sh  tmux_training.sh
analysis/: dataset_analysis_summary.json
configs/: training_config.yaml
data/processed/: dataset_info.json  test.jsonl  validation.jsonl
dataset/: Prompt_sensitive_data.xlsx
scripts/: analyze_dataset.py  analyze_excel_dataset.py  analyze_training.py  analyze_training_strategy.py  custom_inference.py  download_excel.py  evaluate.py  inference.py  preprocess_data.py  production_api.py  train_phi3.py
